# pychain

./: .gitignore  404.html  CONTRIBUTING.md  README.md  doctests.py  examples.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  test_doctest.py
.github/workflows/: docs.yml  publish.yml
docs/: docs.md  index.md
docs/reference/: dict.md  expr.md  iter.md  key.md  seq.md
docs/source/: conf.py  index.rst  reference.rst
docs/sphinx/: conf.py
pychain/: __init__.py  constructors.py  core.py  dict_base.py  dictchain.py  dictstream.py  executors.py  implementations.py  interfaces.py  iter_base.py  iterchain.py  lazyfuncs.py  main.py  scalars.py
reference/dict/: index.html
reference/expr/: index.html
reference/iter/: index.html
reference/seq/: index.html
scripts/: build_docs.py
site/: 404.html  index.html  objects.inv
site/reference/dict/: index.html
site/reference/iter/: index.html
src/: __init__.py  constructors.py  core.py  dict_base.py  executors.py  implementations.py  iter_base.py
src/pychain/: __init__.py  _agg.py  _array.py  _arrays.py  _ast_parsers.py  _chainable.py  _compilers.py  _constructors.py  _core.py  _cythonifier.py  _cythonizer.py  _dict.py  _dict_base.py  _executors.py  _expressions.py  _exprs.py  _files.py  _func.py  _funcs.py  _implementations.py  _iter.py  _iter_base.py  _lazyfuncs.py  _lib.py  _list.py  _main.py  _mod.c  _mod.cpp  _mod.pyi  _mod.pyx  _module_builder.py  _obj_exprs.py  _protocols.py  _scope.py  _sequence.py  _struct.py  _structs.py  _tracker.py  conditionnal.py  constructors.py  (+7 more)
src/pychain/_chains/: __init__.py  _main.py
src/pychain/_compilers/: __init__.py  _ast_parsers.py  _cythonizer.py  _enums.py  _lib.py  _module_builder.py  _protocols.py  _scope.py
src/pychain/_core/: __init__.py  _main.py  _protocols.py
src/pychain/_dict/: __init__.py  _constructors.py  _core.py  _exprs.py  _filters.py  _funcs.py  _groups.py  _io.py  _iter.py  _joins.py  _main.py  _nested.py  _process.py  _record.py  funcs.py
src/pychain/_eager/: _exprs.py  _funcs.py  _iter.py  _struct.py
src/pychain/_executors/: __init__.py  _aggregations.py  _booleans.py  _filters.py  _lists.py  _main.py  _maps.py  _process.py  _rolling.py  _structs.py  _tuples.py  aggregator.py  converter.py  getter.py
src/pychain/_expr/: __init__.py  _expr.py
src/tests/: compilation.py  dev.py  doctests.py  examples.py
tests/: class_example.py  doctests.py  examples.py  exprs.py  performance.py  records.py
typings/cython/: __init__.pyi
typings/cytoolz/: __init__.pyi  dicttoolz.pyi  functoolz.pyi  itertoolz.pyi  recipes.pyi
typings/numba/: __init__.pyi
(+138 files in other folders)
