[project]
description     = "Add your description here"
name            = "pychain"
readme          = "README.md"
requires-python = ">=3.12"
version         = "0.4.01"

dependencies = [
    "cytoolz>=1.0.1",
    "more-itertools>=10.8.0",
    "rolling @ git+https://github.com/OutSquareCapital/rolling.git@add-type-stubs",
]

[dependency-groups]
dev = [
    "cytoolz-stubs",
    "doctester",
    "furo>=2025.9.25",
    "polars>=1.33.1",
    "ruff>=0.14.1",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.5.2",
]

[tool.ruff.format]
docstring-code-format = true

[tool.uv.sources]
cytoolz-stubs = { git = "https://github.com/py-stubs/cytoolz-stubs.git" }
doctester = { git = "https://github.com/OutSquareCapital/doctester.git" }

[build-system]
build-backend = "uv_build"
requires      = ["uv_build>=0.8.15,<0.9.0"]
