[project]
description     = "Add your description here"
name            = "pychain"
readme          = "README.md"
requires-python = ">=3.12"
version         = "0.4.01"

dependencies = [
    "cytoolz>=1.0.1",
    "more-itertools>=10.8.0",
    "rolling @ git+https://github.com/OutSquareCapital/rolling.git@add-type-stubs",
]

[dependency-groups]
dev = [
    "cytoolz-stubs",
    "doctester",
    "polars>=1.33.1",
]

[tool.ruff.format]
docstring-code-format = true

[tool.uv.sources]
cytoolz-stubs = { git = "https://github.com/py-stubs/cytoolz-stubs.git" }
doctester = { git = "https://github.com/OutSquareCapital/doctester.git" }

[build-system]
build-backend = "uv_build"
requires      = ["uv_build>=0.8.15,<0.9.0"]
